# voxtool

./: .gitignore  AGENTS.md  CLAUDE.md  Makefile  README.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: benchmark_experiment.yml  bug.yml  documentation_process.yml  feature_task.yml
.github/workflows/: benchmark-smoke.yml  ci.yml  gpu-benchmarks.yml  release.yml  report.yml
.specify/: feature.json  init-options.json
.specify/extensions/: .registry
.specify/integrations/: claude.manifest.json  codex.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
.specify/workflows/: workflow-registry.json
apps/api/: __init__.py  __main__.py  demo.py  main.py  routes_audio.py  routes_text.py
apps/cli/: __main__.py  audio.py  benchmark.py  dataset.py  report.py
apps/notebook/: README.md  __init__.py  colab_demo.ipynb  colab_demo_helpers.py  helpers.py  voice_benchmark_demo.ipynb
configs/experiments/: README.md  advanced_smoke.yaml  audio_tool_use.yml  full-report.yml  smoke.yml
configs/models/: README.md  gemma.yaml  qwen.yaml  voxtral.yaml
configs/prompts/: README.md  mvp.yml  pipeline_a_text_tool.md  pipeline_b_transcript.md  pipeline_c_audio_tool.md  pipeline_d_transcript_tool.md
configs/tools/: README.md  units.convert.yml
data/: README.md
data/fixtures/: examples.small.jsonl
data/fixtures/advanced/: sample_text.jsonl
data/fixtures/audio/: README.md
docs/: advanced_real_model_runs.md
reports/: README.md
scripts/: build_report.py  generate_dataset.py  run_benchmark.py  synthesize_audio.py
specs/001-voice-benchmark-demo/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md  validation.md
specs/001-voice-benchmark-demo/checklists/: requirements.md
specs/001-voice-benchmark-demo/contracts/: api.md  cli.md  pipeline-artifacts.md  tool-invocation.schema.json
specs/002-voice-benchmark-demo/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md  validation.md
specs/002-voice-benchmark-demo/checklists/: benchmark-coverage.md  requirements.md
specs/002-voice-benchmark-demo/contracts/: api.md  artifacts.md  cli.md  model-output.schema.json
specs/003-advanced-benchmark-phases/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-advanced-benchmark-phases/checklists/: requirements.md
specs/003-advanced-benchmark-phases/contracts/: adapters.md  artifacts.md  cli.md  tools.md
tests/e2e/: test_all_pipelines_smoke.py  test_colab_demo_notebook.py
tests/integration/: test_advanced_pipeline_artifacts.py  test_api_audio_demo.py  test_api_text_demo.py  test_audio_adapter_capabilities.py  test_benchmark_pipeline_b_cli.py  test_generate_dataset_cli.py  test_pipeline_a.py  test_pipeline_a_model_adapter.py  test_pipeline_b.py  test_pipeline_c.py  test_pipeline_d.py  test_report_builder.py  test_synthesize_audio_cli.py
tests/unit/: test_adapter_capabilities.py  test_advanced_metrics.py  test_asr_adapter.py  test_asr_eval.py  test_audio_metadata.py  test_dataset_builder.py  test_dataset_splits.py  test_exact_match_metrics.py  test_gemma3n_adapter.py  test_gemma_adapter_config.py  test_hf_token.py  test_json_parser.py  test_mock_model_adapter.py  test_modality_gap.py  test_model_adapter_contract.py  test_model_output_schema_contract.py  test_model_response.py  test_parser_validation.py  test_pipeline_artifacts.py  test_pipeline_tool_boundaries.py  test_prompt_templates.py  test_qwen_adapter_config.py  test_scaffold.py  test_tool_executor.py  test_tool_manifest.py  test_tool_metrics.py  test_tool_provider.py  test_tool_registry.py  test_tool_schema.py  test_tts_synth.py  test_units_executor.py  test_voxtral_adapter_config.py
