[project]
name = "voxtool"
version = "0.1.0"
description = "Multilingual voice assistant benchmark and demo scaffold."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "jiwer>=3.0.5",
    "pandas>=2.2.0",
    "pydantic>=2.8.0",
    "pyyaml>=6.0.3",
    "typer>=0.12.0",
]

[dependency-groups]
dev = [
    "coverage[toml]>=7.6.0",
    "mypy>=1.11.0",
    "pytest>=8.3.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.6.0",
]

[tool.ruff]
line-length = 88
target-version = "py311"
src = ["apps", "packages", "scripts", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.11"
strict = true
mypy_path = ["apps", "packages"]
files = ["apps", "packages", "scripts", "tests"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=apps --cov=packages --cov=scripts --cov-report=term-missing --cov-report=xml"

[tool.coverage.run]
branch = true
source = ["apps", "packages", "scripts"]

[tool.coverage.report]
show_missing = true
skip_empty = true
