[project]
name = "voxtool"
version = "0.1.0"
description = "Multilingual voice assistant benchmark and demo scaffold."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.136.3",
    "ipykernel>=7.3.0",
    "jiwer>=4.0.0",
    "jsonschema>=4.25.1",
    "matplotlib>=3.10.8",
    "pandas>=2.2.0",
    "pyarrow>=24.0.0",
    "pydantic>=2.13.4",
    "pyyaml>=6.0.3",
    "scikit-learn>=1.9.0",
    "typer>=0.12.0",
    "uvicorn>=0.30.0",
]

[dependency-groups]
dev = [
    "coverage[toml]>=7.6.0",
    "httpx>=0.28.1",
    "mypy>=1.11.0",
    "pandas-stubs>=3.0.3.260530",
    "pytest>=8.3.0",
    "pytest-cov>=7.1.0",
    "ruff>=0.6.0",
    "types-jsonschema>=4.25.1",
]

[tool.ruff]
line-length = 88
target-version = "py311"
src = ["apps", "packages", "scripts", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.11"
strict = true
files = ["apps", "packages", "scripts", "tests"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=apps --cov=packages --cov=scripts --cov-report=term-missing --cov-report=xml"
markers = [
    "unit: unit tests for isolated package behavior",
    "integration: integration tests for CLI, pipeline, and artifact flows",
    "e2e: bounded end-to-end smoke benchmark tests",
    "slow: tests that are excluded from default local smoke runs",
]

[tool.coverage.run]
branch = true
source = ["apps", "packages", "scripts"]

[tool.coverage.report]
show_missing = true
skip_empty = true
