[project]
name = "voxtool"
version = "0.1.0"
description = "Multilingual voice assistant benchmark and demo scaffold."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.136.3",
    "ipykernel>=7.3.0",
    "jiwer>=4.0.0",
    "jsonschema>=4.25.1",
    "matplotlib>=3.10.8",
    "pandas>=3.0.3",
    "pyarrow>=24.0.0",
    "pydantic>=2.13.4",
    "pyyaml>=6.0.3",
    "scikit-learn>=1.9.0",
    "typer>=0.26.7",
    "uvicorn>=0.30.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["packages", "apps"]
include = ["*"]
exclude = ["tests*", "scripts*"]

[dependency-groups]
dev = [
    "coverage[toml]>=7.6.0",
    "httpx>=0.28.1",
    "mypy>=2.1.0",
    "pandas-stubs>=3.0.3.260530",
    "pytest>=8.3.0",
    "pytest-cov>=7.1.0",
    "ruff>=0.6.0",
    "types-jsonschema>=4.25.1",
    "types-PyYAML>=6.0.12",
]

# Optional, heavyweight dependency groups for the advanced benchmark phases.
#
# IMPORTANT: These groups are intentionally NOT included in `dev` and MUST NOT be
# installed by ordinary CI (`make install` installs only the default + `dev`
# groups). Ordinary CI stays lightweight and mock/fixture-based: no real model
# downloads, no GPU. Install a group manually for local or manual GPU workflows,
# e.g. `uv sync --group model` or `uv sync --group finetuning`.
notebook = [
    "jupyter>=1.1.0",
    "notebook>=7.2.0",
]
model = [
    "accelerate>=1.0.0",
    "huggingface-hub>=0.26.0",
    "torch>=2.4.0",
    "transformers>=4.45.0",
]
finetuning = [
    "datasets>=3.0.0",
    "peft>=0.13.0",
    "trl>=0.11.0",
]
speech = [
    "edge-tts>=6.1.0",
    "piper-tts>=1.2.0",
]
quantization = [
    "bitsandbytes>=0.44.0",
]

[tool.ruff]
line-length = 88
target-version = "py311"
src = ["apps", "packages", "scripts", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.11"
strict = true
files = ["apps", "packages", "scripts", "tests"]

# Optional heavyweight model dependencies are not installed in ordinary CI and
# are imported lazily inside real adapters. Ignore their missing stubs so the
# import-safe adapters still typecheck without the `model` group installed.
[[tool.mypy.overrides]]
module = ["transformers.*", "huggingface_hub.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=apps --cov=packages --cov=scripts --cov-report=term-missing --cov-report=xml"
markers = [
    "unit: unit tests for isolated package behavior",
    "integration: integration tests for CLI, pipeline, and artifact flows",
    "e2e: bounded end-to-end smoke benchmark tests",
    "slow: tests that are excluded from default local smoke runs",
]

[tool.coverage.run]
branch = true
source = ["apps", "packages", "scripts"]

[tool.coverage.report]
show_missing = true
skip_empty = true
